--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -11,7 +11,7 @@
         width: 32px;
         height: 32px;
         border: none;
-        background: url('../../resources/svg/Arrow.svg') no-repeat;
+        background: url('../../images/svg/Arrow.svg') no-repeat;
         margin: 0 18px;
         transform: rotate(180deg);
     }
@@ -20,7 +20,7 @@
         width: 32px;
         height: 32px;
         border: none;
-        background: url('../../resources/svg/Arrow.svg') no-repeat;
+        background: url('../../images/svg/Arrow.svg') no-repeat;
         margin: 0 18px;
     }
 
