--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,18 @@ $text-color: #151411;
 $border-color: #518581;
 $white: #FFFFFF;
 $scnd-text-color: #AFADB5;
+
+@media screen and (max-width: 991px) {
+    .not-found {
+
+        &__title {
+            font-size: 24px;
+        }
+    }
+  }
+
+@mixin _991 {
+    @media (max-width: 991px){
+        @content;
+    }
+}
