--- a/src/App/pages/Product/components/MainSeacrh/MainSearch.scss
+++ b/src/App/pages/Product/components/MainSeacrh/MainSearch.scss
@@ -1,3 +1,5 @@
+@import "@styles/variables.scss";
+
 .main-search {
     position: relative;
     width: 1021px;
@@ -8,7 +10,7 @@
         position: absolute;
         top: 25px;
         left: 28px;
-        background: url(../../../../../resources/svg/Search.svg) no-repeat 50% 30%;
+        background: url(../../../../../images/svg/Search.svg) no-repeat 50% 30%;
         height: 32px;
         width: 32px;
     }
@@ -16,6 +18,14 @@
     &__input {
         width: 100%;
         text-indent: 75px;
+        height: 84px;
+        outline: none;
+        border: none;
+        box-shadow: 0px 4px 120px rgba(175, 173, 181, 0.15);
+
+        &:focus {
+            border: 1px solid $border-color;
+          }
     }
 
     &__submit {
@@ -33,7 +43,7 @@
         &:before {
             top: 14px;
             left: 16px;
-            background: url(../../../../../resources/svg/SearchMob.svg) no-repeat 50% 30%;
+            background: url(../../../../../images/svg/SearchMob.svg) no-repeat 50% 30%;
             height: 24px;
             width: 24px;    
         }
@@ -41,6 +51,7 @@
         &__input {
             width: 100%;
             text-indent: 50px;
+            height: 54px;
         }
 
         &__submit {
