--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,23 +10,6 @@
     color: $text-color;
 }
 
-button {
-    background: #FFFFFF;
-    cursor: pointer;
-}
-
-input {
-  height: 84px;
-  outline: none;
-  border: none;
-  text-indent: 29px;
-  box-shadow: 0px 4px 120px rgba(175, 173, 181, 0.15);
-}
-
-input:focus {
-  border: 1px solid $border-color;
-}
-
 h1 {
   font-weight: 700;
   font-size: 64px;
@@ -44,7 +27,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: #AFADB5;
+  color: $scnd-text-color;
 }
 
 svg {
@@ -74,8 +57,5 @@ svg {
   }
   h4 {
     font-size: 14px;
-  }
-  input {
-    height: 54px;
   }
 }
