add orderform and RTK quert

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@ $text-color: #151411;
 $border-color: #518581;
 $white: #FFFFFF;
 $scnd-text-color: #AFADB5;
+$red: red;
 
 @media screen and (max-width: 991px) {
     .not-found {
